<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:fadingEdgeLength="20dp"
        app:cardBackgroundColor="@color/theme_color"
        app:cardElevation="@dimen/elevation"
        app:cardUseCompatPadding="false">

        <!--ImageView come here-->
    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:gravity="center"
            android:paddingStart="@dimen/very_big_padding"
            android:paddingEnd="@dimen/very_big_padding">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:theme="@style/AppTheme.EditText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtPassowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inpTxtEmail"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme.EditText" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/lblResendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inpTxtPassowrd"
                android:padding="@dimen/small_padding"
                android:text="@string/resend_email"
                android:textColor="@color/theme_text_color" />

            <TextView
                android:id="@+id/lblForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inpTxtPassowrd"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/small_padding"
                android:text="@string/forgot_password"
                android:textColor="@color/theme_text_color" />


            <Button
                android:id="@+id/btnLogin"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblResendEmail"
                android:layout_marginTop="@dimen/normal_padding"
                android:text="@string/btn_login" />

            <TextView
                android:id="@+id/lblHowToVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:padding="@dimen/small_padding"
                android:text="@string/how_to_verify"
                android:textColor="@color/theme_text_color" />

            <TextView
                android:id="@+id/lblSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/small_padding"
                android:text="@string/not_a_member"
                android:textColor="@color/hint_text_color" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>