<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/big_padding"
    android:paddingBottom="@dimen/very_small_padding"
    android:paddingEnd="@dimen/big_padding"
    android:paddingStart="@dimen/big_padding"
    android:paddingTop="@dimen/big_padding">

    <TextView
        android:id="@+id/lblTitle"
        fontPath="fonts/Lato-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_forgot_password"
        android:textColor="@color/theme_text_color"
        android:textSize="22sp"
        tools:ignore="MissingPrefix" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inpTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTitle"
        android:layout_marginTop="@dimen/normal_padding"
        android:theme="@style/AppTheme.TextInputLayout"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:theme="@style/AppTheme.EditText" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/lblCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inpTxtEmail"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_toStartOf="@+id/lblResetPassword"
        android:padding="@dimen/small_padding"
        android:text="@string/cancel"
        android:textColor="@color/theme_text_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lblResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/inpTxtEmail"
        android:layout_marginTop="@dimen/normal_padding"
        android:padding="@dimen/small_padding"
        android:text="@string/reset_password"
        android:textColor="@color/theme_text_color"
        android:textSize="18sp" />

</RelativeLayout>