<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:fadingEdgeLength="20dp"
        app:cardBackgroundColor="@color/theme_color"
        app:cardElevation="@dimen/elevation"
        app:cardUseCompatPadding="false">

        <!--ImageView come here-->
    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="@dimen/very_big_padding"
            android:paddingStart="@dimen/very_big_padding">

            <TextView
                fontPath="fonts/Lato-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/big_padding"
                android:text="@string/title_sign_up"
                android:textSize="22sp"
                tools:ignore="MissingPrefix" />

            <View
                android:layout_width="20dp"
                android:layout_height="3dp"
                android:layout_gravity="start"
                android:background="@color/theme_color" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtUniversityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/txtUniversityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/university_name"
                    android:inputType="text|textNoSuggestions"
                    android:theme="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inpTxtEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_padding"
                    android:layout_weight="1"
                    android:theme="@style/AppTheme.TextInputLayout"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/email_id"
                        android:inputType="text|textNoSuggestions"
                        android:theme="@style/AppTheme.EditText" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/lblEmailExt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="xxx.edu"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtPassowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtConfPassowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/txtConfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/lblTnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:text="@string/tnc"
                android:gravity="center"
                android:textColor="@color/hint_text_color" />

            <Button
                android:id="@+id/btnSignUp"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:text="@string/btn_sign_up" />

            <TextView
                android:id="@+id/lblSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/already_have_an_account"
                android:textColor="@color/hint_text_color" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>