<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false">

    <!--include toolbar-->
    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="@dimen/very_big_padding"
            android:paddingStart="@dimen/very_big_padding">

            <ImageView
                android:id="@+id/imgUserProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inpTxtFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/very_small_padding"
                    android:layout_weight="1"
                    android:theme="@style/AppTheme.TextInputLayout"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/first_name"
                        android:inputType="text|textNoSuggestions"
                        android:theme="@style/AppTheme.EditText" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inpTxtLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/very_small_padding"
                    android:layout_weight="1"
                    android:theme="@style/AppTheme.TextInputLayout"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/last_name"
                        android:inputType="text|textNoSuggestions"
                        android:theme="@style/AppTheme.EditText" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_color_light"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/dob"
                    android:inputType="text|textNoSuggestions"
                    android:theme="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/small_padding"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioWomen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_padding"
                        android:text="@string/female" />
                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/nationality"
                    android:inputType="text|textNoSuggestions"
                    android:theme="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtUniversityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtUniversityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/university_name"
                    android:inputType="text|textNoSuggestions"
                    android:theme="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpTxtMajor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:theme="@style/AppTheme.TextInputLayout"
                app:errorEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtMajor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/major"
                    android:inputType="text|textNoSuggestions"
                    android:theme="@style/AppTheme.EditText" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:text="@string/btn_next" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>